# sca-tool-evaluation-1

./: .env_example  .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  env_documentation.sh  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
Makefile-for-python/: MAKEFILE.md  add_root_to_sbom.py  merge_sboms.py  normalize_sbom.py  readme-python-poetry.md  sbom_validation_pipeline.py
docs/: README_tool_evaluation.md
knowledge/: README.md
knowledge/architecture/: analysis-and-significance.md  architecture.md  evaluation-core.md  ground-truth-generation.md  nvd-completeness-diagnostic.md  orchestration-and-runners.md  overview.md  reporting.md  tool-adapters.md
knowledge/decisions/: decision-0001-adapter-pattern-for-tools.md  decision-0002-osv-as-single-source-of-truth.md  decision-0003-immutable-time-fixed-ground-truth.md  decision-0004-deterministic-balancing.md  decision-0005-identifier-gated-project-centric-matching.md  decision-0006-maven-date-filter-disabled.md  decision-0007-eval-analysis-reporting-separation.md  decision-0008-heuristic-vs-ground-truth-separation.md  decisions.md
knowledge/domain/: domain.md  glossary.md
knowledge/ideas/: idea-nvd-completeness-diagnostic.md  ideas.md
knowledge/prds/: prd-nvd-completeness-diagnostic.md
knowledge/qa/: qa-nvd-completeness-merge-reconciliation.md  qa.md
results/: README.md
results/paper/Additional_Test_for_paper_ready_after_2_weeks_20260410T072620Z/: aggregated_results.tex  ground_truth.csv  ground_truth.stat.txt  sbom.json  stats.json
results/paper/Additional_Test_for_paper_ready_after_2_weeks_20260410T072620Z/run_1/: aggregated_results.tex  ecosystem_summary.tex  recall_significance.json  recall_significance.tex  run_status.json  tool_comparison_summary.json  tool_comparison_summary.txt  tool_repeat_comparison.json  tool_repeat_comparison.txt
results/paper/Additional_Test_for_paper_ready_after_2_weeks_20260410T072620Z/run_1/gt_comparison/: gt0.hash  gt_comparison_stdout.json  gt_diff_report.txt  gt_diff_summary.json
results/sbom/: sbom.json  sbom.xml
src/: methodology.md
src/evaluation/: README_tool_evaluation.md  evaluate.py  temporal_runner.py
src/evaluation/adapters/: base.py  dtrack.py  github_advisory.py  nvd.py  oss_index.py  osv.py  snyk.py  trivy.py
src/evaluation/analysis/: fp_heuristics.py  plots.py  significance.py  statistics.py
src/evaluation/core/: evaluation.py  fp_classification.py  ground_truth.py  gt_hash.py  normalization.py  tools.py  version_matching.py
src/evaluation/nvd_completeness/: __init__.py  coverage.py  record.py  report.py  runner.py
src/evaluation/orchestration/: aggregate_experiments.py  ground_truth_compare.py  ground_truth_diff.py  ground_truth_snapshot.py
src/evaluation/reporting/: dump_tool_findings.py  evaluation_report.py  tool_findings_txt.py
src/ground_truth_generation/: balancing.py  build_multi_ground_truth_dataset.py  gt_statistics.py  osv_common.py  statistics.py  validation.py
src/ground_truth_generation/ecosystems/: maven.py  npm.py  nuget.py  nuget_packages_themed.py  pypi.py
src/voting_evaluation/: voting_from_evaluations.py
tests/: conftest.py  test_adapter_subprocess.py  test_adapters.py  test_adapters_extra.py  test_analysis.py  test_core_extra.py  test_coverage_boost.py  test_coverage_gap.py  test_coverage_misc.py  test_ecosystems.py  test_evaluate_helpers.py  test_evaluation.py  test_evaluation_report.py  test_gt_generation.py  test_gt_statistics.py  test_model.py  test_normalization.py  test_nvd_completeness.py  test_orchestration.py  test_oss_index.py  test_reporting.py  test_smoke_imports.py  test_snyk_dtrack_trivy.py  test_temporal_ecosystems.py  test_temporal_runner.py  test_tools.py  test_version_matching.py
tools/: build_ground_truth.sh  dtrack_prepare.sh  evaluate_snyk.sh  evaluate_tools.sh  find_all_dependencies.sh  imports_to_pyproject.sh  imports_to_pyproject_debug.sh  imports_to_pyproject_with_logfile.sh  run_experiment.sh
