[project]
name = "sca-tool-evaluation"
version = "0.1.0"
description = "Evaluation framework for Software Composition Analysis (SCA) tools using OSV-based ground truth."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Peter Mandl", email = "peter.mandl@hm.edu" }
]
requires-python = ">=3.12,<4.0"
keywords = [
    "software-composition-analysis",
    "sca",
    "vulnerability",
    "osv",
    "benchmark",
    "ground-truth",
    "sbom",
    "cyclonedx",
    "supply-chain-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/prcmandl/sca-tool-evaluation"
Repository = "https://github.com/prcmandl/sca-tool-evaluation"
Issues = "https://github.com/prcmandl/sca-tool-evaluation/issues"


[tool.poetry]
name = "sca-tool-evaluation"
version = "0.1.0"
description = "Evaluation framework for Software Composition Analysis (SCA) tools using OSV-based ground truth."
authors = ["Peter Mandl <peter.mandl@hm.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/prcmandl/sca-tool-evaluation"
packages = [
  { include = "evaluation", from = "src" },
  { include = "ground_truth_generation", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
cyclonedx-python-lib = "^11.7.0"
matplotlib = "^3.10.8"
numpy = "^2.4.4"
packaging = "^26.1"
requests = "^2.33.1"
scipy = "^1.17.1"
semantic-version = "^2.10.0"
tqdm = "^4.67.3"

[tool.poetry.group.dev.dependencies]
cyclonedx-bom = "^7.3.0"
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402", "E741", "F401", "F403", "F405", "F811", "F841", "E731", "E722"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
