[project]
name = "sca-tool-evaluation"
version = "0.1.0"
description = "Evaluation framework for Software Composition Analysis (SCA) tools using OSV-based ground truth."
authors = [
    { name = "Peter Mandl", email = "peter.mandl@hm.edu" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12,<4.0"

keywords = [
    "software-composition-analysis",
    "sca",
    "vulnerability",
    "osv",
    "benchmark",
    "ground-truth",
    "sbom",
    "cyclonedx",
    "supply-chain-security"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance"
]

dependencies = [
    "cyclonedx-python-lib>=11.7.0,<12.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "numpy>=2.4.4,<3.0.0",
    "packaging>=26.1,<27.0",
    "requests>=2.33.1,<3.0.0",
    "scipy>=1.17.1,<2.0.0",
    "semantic-version>=2.10.0,<3.0.0",
    "tqdm>=4.67.3,<5.0.0"
]

[project.urls]
Homepage = "https://github.com/prcmandl/sca-tool-evaluation"
Repository = "https://github.com/prcmandl/sca-tool-evaluation"
Issues = "https://github.com/prcmandl/sca-tool-evaluation/issues"

[tool.poetry]
packages = [
    { include = "evaluation", from = "src" },
    { include = "ground_truth_generation", from = "src" }
]

[tool.poetry.group.dev.dependencies]
cyclonedx-bom = "^7.3.0"
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
# Record file paths relative to this config file (project root) so that
# build/coverage/coverage.xml lists files as `src/evaluation/...` — the same
# paths SonarQube indexes via `sonar.sources=src`. Without this flag coverage
# emits absolute paths and Sonar silently drops the mapping.
relative_files = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",
    "E402",
    "E741",
    "F401",
    "F403",
    "F405",
    "F811",
    "F841",
    "E731",
    "E722"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
